overflow fixed

--- a/client/src/styles/chatRoom.module.scss
+++ b/client/src/styles/chatRoom.module.scss
@@ -7,7 +7,7 @@
     background: $neutral;
     display: flex;
     flex-direction: column;
-
+    overflow: hidden;
     .container,
     .inputPanel {
         padding: 0rem 2rem;
@@ -17,8 +17,9 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-
+        overflow: hidden;
         .messages {
+            overflow: auto;
             display: flex;
             flex-direction: column;
             margin-top: 1rem;
@@ -29,6 +30,6 @@
         }
     }
     .inputPanel {
-        height: 5rem;
+        height: 3rem;
     }
 }
